added getaggregateactivity endpoint
